@@ -21,6 +21,8 @@
 
 #include "DataScanner.h"
 
+#include <locale.h>
+
 @implementation DataScanner
 + (DataScanner *)scannerWithData:(NSData *)_data
 {
@@ -32,6 +34,9 @@
     if ((self = [super init])) {
         Assign(data, _data);
         position = 0;
+        
+        // FIXME: find a cleaner way of reading numbers independently of locale
+        setlocale(LC_NUMERIC, "en_US");
     }
     return self;
 }
